@@ -1,5 +1,8 @@
 2001-05-14  Dave Peticolas  <dave@krondo.com>
 
+	* src/scm/report/register.scm: reverse balance where appropriate.
+	put total in proper column.
+
 	* src/scm/report/price-scatter.scm: use a commodity option
 	so stocks/mutuals can be selected.
 
